--- a/src/main/webapp/pages/newFormDialog/newFormDialog.html
+++ b/src/main/webapp/pages/newFormDialog/newFormDialog.html
@@ -1,8 +1,8 @@
 <wm-partial data-ng-controller="newFormDialogPageController" name="partial1">
     <wm-layoutgrid name="layoutgrid1">
-        <wm-gridrow name="gridrow1" padding="1em unset 2em unset">
+        <wm-gridrow name="gridrow1">
             <wm-gridcolumn columnwidth="12" name="gridcolumn1">
-                <wm-composite name="composite4_1">
+                <wm-composite name="composite4_1" show="bind:Variables.StandardUserMunicipalities.dataSet.content.length > 1" padding="unset unset 2em unset">
                     <wm-label class="col-md-3 form-control-static" caption="Select Municipality" name="label20" width="160px" fontweight="bold"></wm-label>
                     <wm-container class="col-md-9" name="container4" width="240px">
                         <wm-select dataset="bind:Variables.StandardUserMunicipalities.dataSet" datafield="ID" displayfield="MunicipalityName" name="selectMunicipality" orderby="MunicipalityName:asc" placeholder="Select Municipality" on-change="Variables.svFormTypes.invoke()"></wm-select>
@@ -10,9 +10,9 @@
                 </wm-composite>
             </wm-gridcolumn>
         </wm-gridrow>
-        <wm-gridrow name="gridrow2" padding="unset unset 2em unset">
+        <wm-gridrow name="gridrow2">
             <wm-gridcolumn columnwidth="12" name="gridcolumn3">
-                <wm-composite name="composite3" show="bind:!!Widgets.selectMunicipality.datavalue">
+                <wm-composite name="composite3" show="bind:!!Widgets.selectMunicipality.datavalue" padding="unset unset 2em unset">
                     <wm-label class="col-md-3 form-control-static" name="label18" caption="Filter by Category" width="160px" fontweight="bold"></wm-label>
                     <wm-container class="col-md-9" name="container2" width="240px">
                         <wm-select name="selectCategory" datafield="id" placeholder="All Categories" dataset="bind:Variables.lvFormCategories.dataSet" displayfield="category" on-change="Variables.svFormTypes.invoke()"></wm-select>
@@ -20,9 +20,9 @@
                 </wm-composite>
             </wm-gridcolumn>
         </wm-gridrow>
-        <wm-gridrow name="gridrow3" padding="unset unset 1em unset">
+        <wm-gridrow name="gridrow3">
             <wm-gridcolumn columnwidth="12" name="gridcolumn5">
-                <wm-composite name="composite4" show="bind:!!Variables.svFormTypes.dataSet.content.length">
+                <wm-composite name="composite4" show="bind:!!Variables.svFormTypes.dataSet.content.length" padding="unset unset 1em unset">
                     <wm-label class="col-md-3 form-control-static" name="label19" caption="Select Form Design" width="160px" fontweight="bold"></wm-label>
                     <wm-container class="col-md-9" name="container3" width="240px">
                         <wm-select name="selectForm" dataset="bind:Variables.svFormTypes.dataSet" datafield="ID" displayfield="FormType" placeholder="Select Form Design"></wm-select>
